@@ -19,7 +19,7 @@ readability(x, measure, drop = TRUE)
   "Fucks", "Linsear.Write", "LIW", "nWS", "nWS.2", "nWS.3", "nWS.4", "RIX",
   "Scrabble", "SMOG", "SMOG.C", "SMOG.simple", "SMOG.de",      "Spache",
   "Spache.old", "Strain", "Traenkle.Bailer", "Traenkle.Bailer.2",
-  "Wheeler.Smith"), drop = TRUE)
+  "Wheeler.Smith", "meanSentenceLength", "meanWordSyllables"), drop = TRUE)
 }
 \arguments{
 \item{x}{a \link{corpus} object or character vector}
